fix: adjust in-addition section, change gap and padding in footer-container2

--- a/shelter/style.css
+++ b/shelter/style.css
@@ -223,7 +223,7 @@ header {
 }
 
 .h3-light {
-	margin: 19px 0;
+	margin: 18px 0;
 	font-family: Georgia;
 	font-size: 35px;
 	font-weight: 400;
@@ -366,7 +366,7 @@ header {
 
 
 .in-addition {
-	padding: 63px 40px 79px;
+	padding: 61px 40px 80px;
 	display: flex;
 	flex-wrap: nowrap;
 	justify-content: center;
@@ -515,11 +515,12 @@ footer {
 
 .footer-container2 {
 	padding-top: 15px;
+	padding-right: 7px;
 	height: 270px;
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
-	gap: 43px;
+	gap: 33px;
 }
 
 .link-container {
